app_server: detach client allocator on quit.

* This prevents sending out notification to applications that are already
  gone, and should thus fix #9116 according to John.